fixed bug collaps nav

--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -256,12 +256,14 @@ li a {
         position: absolute;
         width: 100%;
         height: 55%;
-        background: #333;
-        top: -100%;
+        background: linear-gradient(#aa0041, #540316);
+        left: -100%;
+        top: 65px;
         transition: 0.5s;
     }
 
     nav.active {
+        left: 0;
         top: 65px;
     }
 
